--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,7 @@
+analyzer:
+  enable-experiment:
+    - non-nullable
+
 name: app
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
